@@ -20,8 +20,6 @@ import javax.swing.JSpinner;
 import javax.swing.JTextField;
 import javax.swing.SpinnerNumberModel;
 import javax.swing.SwingConstants;
-import javax.swing.event.ChangeEvent;
-import javax.swing.event.ChangeListener;
 
 import ultimate.karoapi4j.KaroAPICache;
 import ultimate.karoapi4j.enums.EnumCreatorParticipation;
@@ -29,8 +27,9 @@ import ultimate.karoapi4j.enums.EnumGameDirection;
 import ultimate.karoapi4j.enums.EnumGameTC;
 import ultimate.karoapi4j.exceptions.GameSeriesException;
 import ultimate.karoapi4j.model.extended.GameSeries;
+import ultimate.karoapi4j.model.extended.PlaceToRace;
 import ultimate.karoapi4j.model.extended.Rules;
-import ultimate.karoapi4j.model.official.Map;
+import ultimate.karoapi4j.model.official.Generator;
 import ultimate.karomuskel.GameSeriesManager;
 import ultimate.karomuskel.Planner;
 import ultimate.karomuskel.ui.EnumNavigation;
@@ -40,16 +39,16 @@ import ultimate.karomuskel.ui.MainFrame;
 import ultimate.karomuskel.ui.Screen;
 import ultimate.karomuskel.ui.components.BooleanModel;
 import ultimate.karomuskel.ui.components.GenericEnumModel;
-import ultimate.karomuskel.ui.components.MapRenderer;
+import ultimate.karomuskel.ui.components.PlaceToRaceRenderer;
 
-public class MapsAndRulesScreen extends Screen implements ActionListener, ChangeListener
+public class MapsAndRulesScreen extends MapComboBoxScreen implements ActionListener
 {
 	private static final long							serialVersionUID				= 1L;
 
 	private static final String							ACTION_MAP_SELECT				= "mapSelect";
+	private static final String							ACTION_MAP_CONFIGURE			= "mapConfigure";
 	private static final String							ACTION_RECALC_NUMBER_OF_GAMES	= "recalcNumberOfGames";
 
-	private List<JComboBox<Map>>						mapCBList;
 	private List<JSpinner>								gamesPerPlayerSpinnerList;
 	private List<JSpinner>								numberOfPlayersSpinnerList;
 	private List<JSpinner>								minZzzSpinnerList;
@@ -81,14 +80,14 @@ public class MapsAndRulesScreen extends Screen implements ActionListener, Change
 	@Override
 	public GameSeries applySettings(GameSeries gameSeries, EnumNavigation direction) throws GameSeriesException
 	{
-		Map map;
+		PlaceToRace ptr;
 		Rules rules;
 		for(int i = 0; i < this.numberOfMaps; i++)
 		{
-			map = (Map) this.mapCBList.get(i).getSelectedItem();
+			ptr = (PlaceToRace) this.mapCBList.get(i).getSelectedItem();
 			rules = createRules(i);
 
-			gameSeries.getMapsByKey().put("" + i, Arrays.asList(map));
+			gameSeries.getMapsByKey().put("" + i, Arrays.asList(ptr));
 			gameSeries.getRulesByKey().put("" + i, rules);
 		}
 		return gameSeries;
@@ -104,7 +103,8 @@ public class MapsAndRulesScreen extends Screen implements ActionListener, Change
 		{
 			this.numberOfMaps = numberOfMapsTmp;
 
-			this.mapCBList = new LinkedList<>();
+			this.mapCBList = new LinkedList<>(); // from super class
+			this.mapEditButtonList = new LinkedList<>(); // from super class
 			this.gamesPerPlayerSpinnerList = new LinkedList<>();
 			this.numberOfPlayersSpinnerList = new LinkedList<>();
 			this.minZzzSpinnerList = new LinkedList<>();
@@ -127,7 +127,8 @@ public class MapsAndRulesScreen extends Screen implements ActionListener, Change
 			gbc.fill = GridBagConstraints.HORIZONTAL;
 
 			JLabel label;
-			JComboBox<Map> mapCB;
+			JComboBox<PlaceToRace> mapCB;
+			JButton mapEditButton;
 			JSpinner gamesPerPlayerSpinner;
 			JSpinner numberOfPlayersSpinner;
 			JSpinner minZzzSpinner;
@@ -137,7 +138,7 @@ public class MapsAndRulesScreen extends Screen implements ActionListener, Change
 			JComboBox<Label<Boolean>> checkpointsActivatedCB;
 			JComboBox<Label<EnumGameDirection>> directionCB;
 
-			Map map;
+			PlaceToRace map;
 			Rules rules;
 			int gamesPerPlayer;
 			int numberOfPlayers;
@@ -149,20 +150,20 @@ public class MapsAndRulesScreen extends Screen implements ActionListener, Change
 
 			int maxGamesPerPlayer = GameSeriesManager.getIntConfig(gameSeries, GameSeries.CONF_MAX_GAMES_PER_PLAYER);
 
+			// remove maps with only less then 3 players (since only races with creator + 2 others make sense)
+			List<PlaceToRace> maps = this.karoAPICache.getPlacesToRace();
+			maps.removeIf(m -> {
+				return m.getPlayers() < 3;
+			});
+
 			for(int i = 0; i < this.numberOfMaps; i++)
 			{
 				final int j = i;
 
-				// remove maps with only less then 3 players (since only races with creator + 2 others make sense)
-				LinkedList<Map> maps = new LinkedList<Map>(karoAPICache.getMaps());
-				maps.removeIf(m -> {
-					return m.getPlayers() < 3;
-				});
-
 				if(gameSeries.getMapsByKey().containsKey("" + i) && gameSeries.getMapsByKey().get("" + i).size() > 0)
 					map = gameSeries.getMapsByKey().get("" + i).get(0);
 				else
-					map = maps.getFirst();
+					map = maps.get(0);
 
 				rules = gameSeries.getRulesByKey().get("" + i);
 				if(rules != null)
@@ -194,8 +195,8 @@ public class MapsAndRulesScreen extends Screen implements ActionListener, Change
 				contentPanel.add(label, gbc);
 
 				mapCB = new JComboBox<>();
-				mapCB.setModel(new DefaultComboBoxModel<Map>(maps.toArray(new Map[0])));
-				mapCB.setRenderer(new MapRenderer());
+				mapCB.setModel(new DefaultComboBoxModel<PlaceToRace>(maps.toArray(new PlaceToRace[0])));
+				mapCB.setRenderer(new PlaceToRaceRenderer());
 				mapCB.setSelectedItem(map);
 				mapCB.addActionListener(this);
 				mapCB.setActionCommand(ACTION_MAP_SELECT + i);
@@ -203,7 +204,13 @@ public class MapsAndRulesScreen extends Screen implements ActionListener, Change
 				gbc.gridx = 1;
 				contentPanel.add(mapCB, gbc);
 
+				mapEditButton = new JButton(Language.getString("option.edit"));
+				mapEditButton.setEnabled(map instanceof Generator);
+				mapEditButton.addActionListener(this);
+				mapEditButton.setActionCommand(ACTION_MAP_CONFIGURE + i);
 				gbc.gridwidth = 1;
+				gbc.gridx = 5;
+				contentPanel.add(mapEditButton, gbc);
 
 				gbc.gridy++;
 
@@ -289,6 +296,10 @@ public class MapsAndRulesScreen extends Screen implements ActionListener, Change
 				this.checkpointsActivatedCBList.add(checkpointsActivatedCB);
 				this.directionCBList.add(directionCB);
 				this.mapCBList.add(mapCB);
+				this.mapEditButtonList.add(mapEditButton);
+				
+				// preselect values from gameseries
+				preselectMap(map, i);
 
 				actionPerformed(new ActionEvent(gamesPerPlayerSpinner, j, ACTION_RECALC_NUMBER_OF_GAMES + j));
 			}
@@ -323,11 +334,13 @@ public class MapsAndRulesScreen extends Screen implements ActionListener, Change
 		if(e.getActionCommand().startsWith(ACTION_MAP_SELECT))
 		{
 			int mapNumber = Integer.parseInt(e.getActionCommand().substring(ACTION_MAP_SELECT.length()));
-			int mapMax = ((Map) ((JComboBox<Map>) e.getSource()).getSelectedItem()).getPlayers();
+			PlaceToRace ptr = ((PlaceToRace) ((JComboBox<PlaceToRace>) e.getSource()).getSelectedItem());
+			int mapMax = ptr.getPlayers();
 			int max = Math.min(gameSeries.getPlayers().size() + 1, (gameSeries.getCreatorParticipation() == EnumCreatorParticipation.not_participating ? mapMax : mapMax - 1));
 			((SpinnerNumberModel) this.numberOfPlayersSpinnerList.get(mapNumber).getModel()).setMaximum(max);
 			if(((Integer) ((SpinnerNumberModel) this.numberOfPlayersSpinnerList.get(mapNumber).getModel()).getValue()) > max)
 				((SpinnerNumberModel) this.numberOfPlayersSpinnerList.get(mapNumber).getModel()).setValue(max);
+			this.mapEditButtonList.get(mapNumber).setEnabled(ptr instanceof Generator);				
 		}
 		else if(e.getActionCommand().startsWith(ACTION_RECALC_NUMBER_OF_GAMES))
 		{
@@ -341,10 +354,10 @@ public class MapsAndRulesScreen extends Screen implements ActionListener, Change
 			boolean warning = !Planner.checkNumberOfGamesWorksOutEvenly(totalNumberOfPlayers, gamesPerPlayer, numberOfPlayersPerGame);
 			this.numberOfGamesTFList.get(index).setText("" + expectedGames + (warning ? " " + Language.getString("screen.mapsAndRules.warning") : ""));
 		}
-	}
-
-	@Override
-	public void stateChanged(ChangeEvent e)
-	{
+		else if(e.getActionCommand().startsWith(ACTION_MAP_CONFIGURE))
+		{
+			int mapNumber = Integer.parseInt(e.getActionCommand().substring(ACTION_MAP_CONFIGURE.length()));
+			super.handleGeneratorConfigurationEvent(mapNumber);
+		}
 	}
 }
